Status Command ISSUE #3

--- a/index.html
+++ b/index.html
@@ -68,7 +68,14 @@
    </div>
 
    <div id="timeAndDate">
-     Date will go here onload
+     Date Me
+   </div>
+
+   <div>
+     Status: 
+     <span id="status">
+      Airborn
+     </span>
    </div>
 
    <div id="divConsole" style="margin:4px; width:650px; height:500px; float:left;">
