--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
       Warp Speed!
      </span>
    </div>
+   <img id="bsod" src="distrib/images/bsod.png" style="display: none;">
    <div id="divConsole" style="margin:4px; width:650px; height:500px; float:left;">
       <canvas id="display"
               width="600px"
