--- a/index.html
+++ b/index.html
@@ -68,16 +68,17 @@
              onclick="TSOS.Control.hostBtnReset_click(this);">
    </div>
 
-   <div id="timeAndDate">
-     Date Me
-   </div>
+      <div id="timeAndDate">
+      Date Me
+      </div>
 
-   <div>
-     Status: 
-     <span id="status">
-      Warp Speed!
-     </span>
-   </div>
+      <div id="statusBar">
+      Status: 
+         <span id="status">
+         Warp Speed!
+         </span>
+      </div>
+
    <img id="bsod" src="distrib/images/bsod.png" style="display: none;">
    <div id="divConsole" style="margin:4px; width:650px; height:500px; float:left;">
       <canvas id="display"
