HTML PCB & Memory

--- a/index.html
+++ b/index.html
@@ -117,13 +117,43 @@
    </div>
 </div>
 
+<div id="divPCB">
+   <label>PCB Display</label>
+   <table id="tablePCB">
+      <tr>
+         <th>State</th>
+         <th>PID</th>
+         <th>PC</th>
+         <th>IR</th>
+         <th>XReg</th>
+         <th>YReg</th>
+         <th>ZFlag</th>
+         <th>Start Addr</th>
+         <th>End Addr</th>
+      </tr>
+   </table>
+
+</div>
+
+<br><br>
+
+<div id="divMemory">
+   <label>Memory Display</label>
+   <table id="tableMemory">
+      <tr>
+         <th>Placeholder</th>
+      </tr>
+   </table>
+</div>
+
 <p class="footerText" style="clear:both;">
    <br>
-   Copyright &copy; 2008 - 2019 No Rights Reserved.
+   Copyright &copy; 2008 - 2021 No Rights Reserved.
    <br>
    Reproduction is inhibited without the express written consent of
-   Ted Codd, Stevie Ray Vaughan, and Ian Fleming.
+   Ted Codd, Stevie Ray Vaughan, Ian Fleming, and me.
 </p>
 
 </body>
+
 </html>
