Memory Display complete ISSUE #16

--- a/index.html
+++ b/index.html
@@ -137,12 +137,10 @@
 
 <br><br>
 
-<div id="divMemory">
+<div id="divMemory" class="classMemory">
    <label>Memory Display</label>
    <table id="tableMemory">
-      <tr>
-         <th>Placeholder</th>
-      </tr>
+
    </table>
 </div>
 
