Execute command & AsciiLibrary ISSUE #17

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
    <!-- Globals CONSTANTS and _Variables. Must included be first. -->
    <script type="text/javascript" src="distrib/globals.js"></script>
+   <script type="text/javascript" src="distrib/asciiLibrary.js"></script>
 
    <!-- Host (Virtual Machine / Hardware Simulation) Routines -->
    <script type="text/javascript" src="distrib/host/control.js"></script>
