--- a/index.html
+++ b/index.html
@@ -118,6 +118,30 @@
    </div>
 </div>
 
+<br>
+
+<div id="divCPU">
+   <label>CPU Display</label>
+   <table id="tableCPU">
+      <tr>
+         <th>PC</th>
+         <th>IR</th>
+         <th>ACC</th>
+         <th>XReg</th>
+         <th>YReg</th>
+         <th>ZFlag</th>
+      </tr>
+      <tr>
+         <td id="CPU_PC"></td>
+         <td id="CPU_IR"></td>
+         <td id="CPU_ACC"></td>
+         <td id="CPU_X"></td>
+         <td id="CPU_Y"></td>
+         <td id="CPU_Z"></td>
+      </tr>
+   </table>
+</div>
+
 <div id="divPCB">
    <label>PCB Display</label>
    <table id="tablePCB">
@@ -133,7 +157,6 @@
          <th>End Addr</th>
       </tr>
    </table>
-
 </div>
 
 <br><br>
