--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
    <!-- Other Routines -->
    <script type="text/javascript" src="distrib/utils.js"></script>
    <!-- Uncomment the line below to enable GLaDOS testing. -->
-   <!--script type="text/javascript" src="http://alanclasses.github.io/TSOS/test/glados-ip2.js"></script-->
+   <script type="text/javascript" src="http://alanclasses.github.io/TSOS/test/glados-ip2.js"></script>
 
 </head>
 
@@ -85,6 +85,7 @@
       </div>
 
    <img id="bsod" src="distrib/images/bsod.png" style="display: none;">
+
    <div id="divConsole" style="margin:4px; width:650px; height:500px; float:left;">
       <canvas id="display"
               width="600px"
@@ -153,6 +154,7 @@
          <th>State</th>
          <th>PID</th>
          <th>PC</th>
+         <th>ACC</th>
          <th>XReg</th>
          <th>YReg</th>
          <th>ZFlag</th>
