--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
                    id  ="taHostLog"
                    rows="26"
                    cols="48"
-                   style="color: orangered; background-color: darkslategray; padding: 6px;"
-         ></textarea>
+                   style="resize: none; color: peachpuff; background-color: darkslategray; padding: 6px;  border: 2px solid orangered;">
+         </textarea>
       </label>
    </div>
 
@@ -115,8 +115,8 @@
                    id  ="taProgramInput"
                    rows="8"
                    cols="48"
-                   style="color: peachpuff; background-color: darkslategray; padding: 6px;"
-         ></textarea>
+                   style="resize: none; color: peachpuff; background-color: darkslategray; padding: 6px; border: 2px solid orangered;">
+         </textarea>
       </label>
    </div>
 </div>
