--- a/index.html
+++ b/index.html
@@ -185,4 +185,10 @@
 
 </body>
 
+<script> 
+   // Clear the User Input space
+   // This is needed due to some indentation I'm getting...
+   document.getElementById("taProgramInput").value="";
+</script>
+
 </html>
