Cookies in the over, lets finish this

--- a/index.html
+++ b/index.html
@@ -170,6 +170,14 @@
 
 <br>
 
+<canvas id="gameWindow"
+   width="300px"
+   height="300px"
+   tabindex="3">
+</canvas>
+
+<br>
+
 <div id="divMemory" class="classMemory">
    <label>Memory Display</label>
    <table id="tableMemory">
@@ -188,8 +196,8 @@
 </body>
 
 <script> 
-   // Clear the User Input space
-   // This is needed due to some indentation I'm getting...
+   // Clear the User Input space.
+   // This is needed due to some weird indentation I'm getting...
    document.getElementById("taProgramInput").value="";
 </script>
 
