Setting up helper functs for  Disk/dsDD

--- a/index.html
+++ b/index.html
@@ -168,12 +168,11 @@
    </table>
 </div>
 
-<br>
-
 <canvas id="gameWindow"
    width="300px"
    height="300px"
-   tabindex="3">
+   tabindex="3"
+   hidden="true">
 </canvas>
 
 <br>
